# tg-note

./: .cursorrules  .dockerignore  .env.docker.example  .env.docling.example  .env.example  .env.vector.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AGENT_CATEGORIZATION.md  AGENT_CATEGORIZATION_REFACTORING.md  AGENT_KB_REFACTORING.md  AGENT_MODE_IMPLEMENTATION_SUMMARY.md  AGENT_OUTPUT_VERIFICATION.md  AGENT_REFACTORING_COMPLETE.md  AGENT_REFACTORING_SUMMARY.md  AICODE-NOTE-FIX-KB-GITHUB-INIT.md  AICODE-NOTE-FIX-MCP-HUB-CLOSED-RESOURCE-ERROR.md  AICODE-NOTE-IMPROVEMENTS-PROGRESS.md  AICODE-NOTE-IMPROVEMENTS-SUMMARY.md  AICODE-NOTE-MCP-ERROR-FIXES.md  AICODE-NOTE-REINDEX-TIMEOUT-FIX.md  AICODE-NOTE-REVIEW-2025-10-18.md  AICODE-NOTE-SSE-RACE-CONDITION-FIX.md  ALL_FILES_LIST.txt  ANALYSIS_SUMMARY.md  ANSWER_TO_YOUR_QUESTION.md  ARCHITECTURE_FIXED_SUMMARY.md  ARCHITECTURE_VISUALIZATION.md  ASK_MODE_FIX_SUMMARY.md  ASYNC_REFACTORING_SUMMARY.md  BUGFIX_KB_SETUP.md  CENTRALIZATION_SUMMARY.md  CHANGELOG_MCP.md  CHANGELOG_REFACTORING.md  CHANGES_MEM_AGENT_CONNECTIVITY.md  CHANGES_PER_USER_STORAGE.md  CHANGES_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  (+226 more)
.cursor/.agent-tools/: 2158d651-9edb-4733-977e-eb2481956ad6.txt  2c8fe7e7-5c58-46e8-bea8-b85aaf4a5e74.txt  48afe18d-a832-45ce-ac42-b9b4fa7323bc.txt  mcp-client-review-summary.md
.github/: CLEANUP_SUMMARY.md  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml.example  docker.yml  docs.yml  publish-to-pypi.yml
.qwen/: settings.json
.tmp_docling_pkg/docling_mcp-1.3.2.dist-info/: RECORD
agents/autonomous-agent/: index.html
agents/overview/: index.html
agents/qwen-code/: index.html
agents/qwen-code-cli/: index.html
agents/stub-agent/: index.html
architecture/agent-architecture/: index.html
architecture/data-flow/: index.html
architecture/overview/: index.html
architecture/settings-architecture/: index.html
config/: __init__.py  agent_prompts.py  constants.py  kb_structure.py  logging_config.py  prompt_helper.py  prompt_loader.py  settings.py
config/prompts/: README.md  agent_mode_v4.md  agent_mode_v5.md  ask_mode_v2.md  ask_mode_v3.md  kb_query_v3.md  kb_query_v4.md  note_mode_v2.md  note_mode_v3.md
data/: test_processed.json  user_settings_overrides.json
data/mcp_servers/: .gitkeep
data/memory/: .gitkeep  user.md
deployment/cicd/: index.html
deployment/docker/: index.html
deployment/overview/: index.html
deployment/production/: index.html
development/code-quality/: index.html
development/contributing/: index.html
development/overview/: index.html
development/project-structure/: index.html
development/testing/: index.html
docker/: Dockerfile  init.sql
docker/docling-mcp/: .dockerignore  CHANGES.md  CRITICAL_FIX.md  DOCLING_MODEL_PATH_FIX.md  Dockerfile  Dockerfile.pytorch  FINAL_SOLUTION.md  FOR_YOUR_CONFIG.md  PATHFIX_EXPLANATION.md  QUICK_START.md  README.md  VERIFICATION_FOR_HERON_101.md  docker-entrypoint.sh  requirements.txt
docs/: AGENT_ARCHITECTURE.md  AGENT_MCP_COMPATIBILITY.md  AUTONOMOUS_AGENT_GUIDE.md  CHANGES.txt  CONFIG_CENTRALIZATION.md  CONFIG_RU.md  FILE_FOLDER_MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  MCP_CONFIGURATION_GUIDE.md  MCP_SERVER_DISCOVERY.md  MCP_SERVER_DISCOVERY_RU.md  MCP_TOOLS_DISCOVERY.md  MCP_TOOLS_DISCOVERY_RU.md  MEM_AGENT_TRANSPORT_OPTIONS.md  PHASE1_IMPLEMENTATION.md  PHASE1_SUMMARY.txt  PHASE3_IMPLEMENTATION.md  PYDANTIC_SETTINGS_MIGRATION.md  QUICK_START.md  QWEN_CLI_MCP_ANALYSIS_EN.md  QWEN_CLI_MCP_ANALYSIS_RU.md  QWEN_CLI_MCP_CORRECT_APPROACH.md  QWEN_CLI_MULTIPLE_FILES.md  QWEN_CODE_AGENT.md  QWEN_CODE_CLI_INTEGRATION.md  QWEN_MCP_SETUP_GUIDE.md  SETTINGS_ARCHITECTURE.md  SETTINGS_MANAGEMENT.md  SETTINGS_QUICK_START.md  SETTINGS_VISUAL_GUIDE.md
docs_site/: index.md
docs_site/agents/: autonomous-agent.md  kb-reading-tools.md  mcp-config-format.md  mcp-server-registry.md  mcp-tools.md  mem-agent-setup.md  overview.md  qwen-cli-debug-trace.md  (+3 more)
examples/: autonomous_agent_example.py  kb_reading_tools_example.py  mcp_memory_agent_example.py  mem_agent_example.py  memory_integration_example.py  memory_storage_types_example.py  message_dto_example.py  prompt_loader_example.py  qwen_cli_debug_trace_example.py  qwen_cli_multiple_files_example.md  qwen_mcp_integration_example.py  settings_example.py  vector_search_example.py  vector_search_git_events_example.py
knowledge_base/: README.md
scripts/: auto_deploy.blocklist  auto_deploy.blocklist.example  auto_deploy.conf.example  auto_deploy.sh  check_hf.sh  cleanup_duplicate_images.py  download_docling.py  download_docling_models.py  install_mem_agent.py  lms_load_mem_agent.sh  manage_mcp_servers.sh  run_lmstudio_model.sh  start_vllm_server.py  test_mem_agent_basic.py  test_mem_agent_connection.sh  test_model_download_setup.py  validate_kb_images.py  verify_mcp_refactoring.sh
site/: 404.html  index.html  sitemap.xml
src/: __init__.py  main.py
tests/: test_agent_factory.py  test_agent_task_service_kb_lock.py  test_base_kb_service_topics_fix.py  test_bot_vector_search.py  test_circuit_breaker.py  test_content_parser.py  test_docling_model_sync.py  test_docling_tools_recovery.py  test_error_handling.py  test_file_change_monitor.py  test_file_processor.py  test_file_processor_validation.py  test_git_ops.py  test_handlers_async.py  test_handlers_forwarded_fix.py  test_handlers_threading.py  test_image_metadata.py  test_kb_initialization_from_github.py  test_kb_reading_tools.py  test_kb_sync_manager.py  test_links_field_filtering_unit.py  test_main.py  test_markdown_image_validator.py  test_markdown_link_fixer.py  test_markdown_media_validator.py  test_mcp_client.py  test_mcp_docker_integration.py  test_mcp_hub_client.py  test_mcp_hub_client_improvements.py  test_mcp_hub_client_improvements_fixed.py  test_mcp_tools_description.py  test_mcp_user_discovery.py  test_mcp_vector_operations.py  test_media_metadata.py  test_mem_agent.py  test_message_dto.py  test_mkdocs_configurator.py  test_progress_format.py  test_progress_monitor.py  test_prompt_loader.py  (+12 more)
(+408 files in other folders)
